Sat Feb 24 04:12:52 1996  Fredrik Hubinette  <hubbe@tymin.signum.se>

	* program.c, array.c, object.c, gc.c: 
	  Added routines to remove cyclic structures.

Fri Feb 23 02:39:11 1996  Fredrik Hubinette  <hubbe@tymin.signum.se>

        * version 1.7E-12 released
	* file->close() fixed to handle unknown errors

Sat Feb 17 23:05:24 1996  Fredrik Hubinette  <hubbe@sparky.signum.se>

	* sprintf: added support for %2c

Sun Feb 11 01:04:38 1996  Fredrik Hubinette  <hubbe@sparky.signum.se>

	* export.lpc: now updates configure files if needed
	* create_testsuite: added tests for sscanfs %d %o and %x
	* opcodes.c: changed sscanf to use strtol
	* machine.h.in: changed USE_FCNTL_NONBLOCK to what it should be:
	  USE_FCNTL_O_NONBLOCK
	* simulate.lpc: fixed an add_efun for exec
	* Updated a LOT of docfiles.

Sat Feb 10 02:26:25 1996  Fredrik Hubinette  <hubbe@tymin.signum.se>

	* array.c: fixed a coredump when doing & on one compact and
	  one noncompact array.
	* language.y: fixed so that continue now always need a semicolon
          after it.
        * builtin_efuns.c: replace_many fixed.
	* array.c: fix_type_field fixed.
	* las.c: fixed node_is_equal, it can now see the differance between
          different global variables :P

Mon Nov 20 16:52:32 1995  Fredrik Hubinette  <hubbe@sparky.signum.se>

	* builtin_efuns.c (replace_many): Fixed an array bound read.
	* compilation.h: No more macros with empty arguments.
	* configure.in: changed the mystic 'oneshot signals' message
	* interpret.c: print_treturn_type -> print_return_value
	* language.y: inline now implies no_mask
	* machine.h.in: moved HAVE_GETWD & HAVE_GETCWD to files module
	* opcodes.c: changed strtod to STRTOD
	* sprintf.c: fixed some typos, optimized and a bugfix in truncating
	* create_testsuite: added test for get_dir()

Wed Nov 15 10:56:45 1995  Fredrik Hubinette  <hubbe@sparky.signum.se>

        * version 1.6E-12 released

	* configure.in, machine.h.in: moved tests for waitpid and wait4