@@ -23,13 +23,16 @@ extern struct lpc_string *any_type_string;
 void init_types();
 struct lpc_string *parse_type(char *s);
 void stupid_describe_type(char *a,INT32 len);
+void simple_describe_type(struct lpc_string *s);
 char *low_describe_type(char *t);
+struct lpc_string *describe_type(struct lpc_string *type);
 TYPE_T compile_type_to_runtime_type(struct lpc_string *s);
 int match_types(struct lpc_string *a,struct lpc_string *b);
 void reset_type_stack();
 void type_stack_mark();
 void pop_stack_mark();
 void pop_type_stack();
+void type_stack_pop_to_mark();
 void type_stack_reverse();
 void push_type(unsigned char tmp);
 void push_unfinished_type(char *s);
